Add CSS and update index

--- a/index.html
+++ b/index.html
@@ -1,18 +1,42 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <meta charset="utf-8">
+    <title>Hosted Demi</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
     <div class="mainContent">
       <div class="gridContainer">
-        <div id="gridItem">
+        <div class="gridItem">
           <span class="profile-name">Kelly Murray</span>
         </div>
-        <div id="gridItem">
+        <div class="gridItem">
           <span class="profile-name">John Smith</span>
+          <p>
+            This is a lot of text. This is a lot of text.
+            This is a lot of text.
+            This is a lot of text.
+            This is a lot of text.
+            This is a lot of text.
+            This is a lot of text.
+            This is a lot of text.
+            This is a lot of text.
+            This is a lot of text.
+            This is a lot of text.
+            This is a lot of text.
+            This is a lot of text.
+            This is a lot of text.
+            This is a lot of text.
+            This is a lot of text.
+            This is a lot of text.
+
+            This is a lot of text.
+            This is a lot of text.
+          </p>
         </div>
-        <div id="gidItem">
+        <div class="gridItem">
           <span class="profile-name">Chris Davies</span>
         </div>
       </div>
